@@ -1,6 +1,7 @@
 * 1.3.0
     - Do not use ambiguities and compute it from label
     - Add ILabelConverter
+    - Add getResourceByIRI to resource extractor
 
 * 1.2.0
     - Add ResourceReaderFromVirtuoso to read from virtuoso
